三角形入力部を追加

--- a/app.xhtml
+++ b/app.xhtml
@@ -11,7 +11,17 @@
 	    <h1>三角形の中心</h1>
 	</header>
 	<main>
-	    <p>hello, world</p>
+	    <svg xmlns="http://www.w3.org/2000/svg"
+		 id="triangle-canvas">
+		<g>
+		    <line id="triangle__edge-a" stroke="black" stroke-width="2" />
+		    <line id="triangle__edge-b" stroke="black" stroke-width="2" />
+		    <line id="triangle__edge-c" stroke="black" stroke-width="2" />
+		    <circle id="triangle__vertex-a" r="4" fill="black" />
+		    <circle id="triangle__vertex-b" r="4" fill="black" />
+		    <circle id="triangle__vertex-c" r="4" fill="black" />
+		</g>
+	    </svg>
 	</main>
     </body>
 </html>
