--- a/app.xhtml
+++ b/app.xhtml
@@ -21,6 +21,16 @@
 		    <circle id="triangle__centroid" r="4" />
 		</g>
 		<g>
+		    <line id="triangle__internal-angle-bisector-a" stroke-width="1" />
+		    <line id="triangle__internal-angle-bisector-b" stroke-width="1" />
+		    <line id="triangle__internal-angle-bisector-c" stroke-width="1" />
+		    <line id="triangle__incircle-radius-a" stroke-width="1" />
+		    <line id="triangle__incircle-radius-b" stroke-width="1" />
+		    <line id="triangle__incircle-radius-c" stroke-width="1" />
+		    <circle id="triangle__incircle" fill="transparent" />
+		    <circle id="triangle__incenter" r="4" />
+		</g>
+		<g>
 		    <line id="triangle__edge-a" stroke="black" stroke-width="2" />
 		    <line id="triangle__edge-b" stroke="black" stroke-width="2" />
 		    <line id="triangle__edge-c" stroke="black" stroke-width="2" />
@@ -30,6 +40,25 @@
 		</g>
 	    </svg>
 	    <div>
+		<div class="triangle-config-container">
+		    <input type="color" id="incenter-config__color" value="#ffd700" />
+		    <label>
+			<input type="checkbox" id="incenter-config__incenter" />
+			内心
+		    </label>
+		    <label>
+			<input type="checkbox" id="incenter-config__incircle" />
+			内接円
+		    </label>
+		    <label>
+			<input type="checkbox" id="incenter-config__internal-angle-bisector" />
+			内角の二等分線
+		    </label>
+		    <label>
+			<input type="checkbox" id="incenter-config__incircle-radius" />
+			内接円の半径
+		    </label>
+		</div>
 		<div class="triangle-config-container">
 		    <input type="color" id="centroid-config__color" value="#0000cd" />
 		    <label>
