--- a/app.xhtml
+++ b/app.xhtml
@@ -53,11 +53,11 @@
 		<div class="triangle-config-container">
 		    <input type="color" id="incenter-config__color" value="#ffd700" />
 		    <label>
-			<input type="checkbox" id="incenter-config__incenter" />
+			<input type="checkbox" id="incenter-config__incenter" checked="checked" />
 			内心
 		    </label>
 		    <label>
-			<input type="checkbox" id="incenter-config__incircle" />
+			<input type="checkbox" id="incenter-config__incircle" checked="checked" />
 			内接円
 		    </label>
 		    <label>
@@ -83,11 +83,11 @@
 		<div class="triangle-config-container">
 		    <input type="color" id="circumcenter-config__color" value="#ff0000" />
 		    <label>
-			<input type="checkbox" id="circumcenter-config__circumcenter" />
+			<input type="checkbox" id="circumcenter-config__circumcenter" checked="checked" />
 			外心
 		    </label>
 		    <label>
-			<input type="checkbox" id="circumcenter-config__circumcircle" />
+			<input type="checkbox" id="circumcenter-config__circumcircle" checked="checked" />
 			外接円
 		    </label>
 		    <label>
