スペルを修正

--- a/app.xhtml
+++ b/app.xhtml
@@ -161,11 +161,11 @@
 		    <input type="color" id="gergonne-config__color" value="#ff8000" />
 		    <label>
 			<input type="checkbox" id="gergonne-config__gergonne" />
-			ジュルゴンヌ点
+			ジェルゴンヌ点
 		    </label>
 		    <label>
 			<input type="checkbox" id="gergonne-config__cevian" />
-			ジュルゴンヌ点を通るチェバ線
+			ジェルゴンヌ点を通るチェバ線
 		    </label>
 		</div>
 	    </div>
