リダイレクトパスを修正

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <script>window.location = "/app.xhtml";</script>
+    <script>window.location = "/triangle-center/app.xhtml";</script>
   </head>
   <body></body>
 </html>
