スタイルを変更

--- a/app.xhtml
+++ b/app.xhtml
@@ -74,7 +74,7 @@
 		    <circle id="triangle__vertex-c" r="4" fill="black" />
 		</g>
 	    </svg>
-	    <div>
+	    <div class="triangle-config-container-container">
 		<div class="triangle-config-container">
 		    <input type="color" id="incenter-config__color" value="#ffd700" />
 		    <label>
