傍心を追加

--- a/app.xhtml
+++ b/app.xhtml
@@ -31,6 +31,14 @@
 		    <circle id="triangle__nine-point-circle-center" r="4" />
 		</g>
 		<g>
+		    <circle id="triangle__excircle-a" fill="transparent" />
+		    <circle id="triangle__excircle-b" fill="transparent" />
+		    <circle id="triangle__excircle-c" fill="transparent" />
+		    <circle id="triangle__excenter-a" r="4" />
+		    <circle id="triangle__excenter-b" r="4" />
+		    <circle id="triangle__excenter-c" r="4" />
+		</g>
+		<g>
 		    <line id="triangle__altitude-a-1" stroke-width="1" />
 		    <line id="triangle__altitude-b-1" stroke-width="1" />
 		    <line id="triangle__altitude-c-1" stroke-width="1" />p
@@ -133,6 +141,17 @@
 		    <label>
 			<input type="checkbox" id="orthocenter-config__altitude" checked="checked" />
 			垂線
+		    </label>
+		</div>
+		<div class="triangle-config-container">
+		    <input type="color" id="excenter-config__color" value="#008000" />
+		    <label>
+			<input type="checkbox" id="excenter-config__excenter" checked="checked" />
+			傍心
+		    </label>
+		    <label>
+			<input type="checkbox" id="excenter-config__excircle" checked="checked" />
+			傍接円
 		    </label>
 		</div>
 		<div class="triangle-config-container">
