傍心関係を追加

--- a/app.xhtml
+++ b/app.xhtml
@@ -37,6 +37,24 @@
 		    <circle id="triangle__nine-point-circle-center" r="4" />
 		</g>
 		<g>
+		    <line id="triangle__excircle-radius-aa" stroke-width="1" />
+		    <line id="triangle__excircle-radius-ab" stroke-width="1" />
+		    <line id="triangle__excircle-radius-ac" stroke-width="1" />
+		    <line id="triangle__excircle-radius-ba" stroke-width="1" />
+		    <line id="triangle__excircle-radius-bb" stroke-width="1" />
+		    <line id="triangle__excircle-radius-bc" stroke-width="1" />
+		    <line id="triangle__excircle-radius-ca" stroke-width="1" />
+		    <line id="triangle__excircle-radius-cb" stroke-width="1" />
+		    <line id="triangle__excircle-radius-cc" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-aa" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-ab" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-ac" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-ba" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-bb" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-bc" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-ca" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-cb" stroke-width="1" />
+		    <line id="triangle__external-angle-bisector-cc" stroke-width="1" />
 		    <circle id="triangle__excircle-a" fill="transparent" />
 		    <circle id="triangle__excircle-b" fill="transparent" />
 		    <circle id="triangle__excircle-c" fill="transparent" />
@@ -158,6 +176,14 @@
 		    <label>
 			<input type="checkbox" id="excenter-config__excircle" checked="checked" />
 			傍接円
+		    </label>
+		    <label>
+			<input type="checkbox" id="excenter-config__external-angle-bisector" />
+			外角の二等分線
+		    </label>
+		    <label>
+			<input type="checkbox" id="excenter-config__excircle-radius" />
+			傍接円の半径
 		    </label>
 		</div>
 		<div class="triangle-config-container">
