動作しない環境での警告を追加

--- a/app.xhtml
+++ b/app.xhtml
@@ -232,5 +232,11 @@
 		</div>
 	    </div>
 	</main>
+	<script>
+	  window.addEventListener("load", function () {
+	    if (!window.moduleLoaded)
+	      window.alert("このアプリはお使いのブラウザーでは正しく動作しない可能性があります。\nMozilla Firefoxなどをご利用ください。");
+	  });
+	</script>
     </body>
 </html>
