垂線関係を改善

--- a/app.xhtml
+++ b/app.xhtml
@@ -66,12 +66,9 @@
 		    <circle id="triangle__excenter-c" r="4" />
 		</g>
 		<g>
-		    <line id="triangle__altitude-a-1" stroke-width="1" />
-		    <line id="triangle__altitude-b-1" stroke-width="1" />
-		    <line id="triangle__altitude-c-1" stroke-width="1" />p
-		    <line id="triangle__altitude-a-2" stroke-width="1" />
-		    <line id="triangle__altitude-b-2" stroke-width="1" />
-		    <line id="triangle__altitude-c-2" stroke-width="1" />p
+		    <line id="triangle__altitude-a" stroke-width="1" />
+		    <line id="triangle__altitude-b" stroke-width="1" />
+		    <line id="triangle__altitude-c" stroke-width="1" />p
 		    <circle id="triangle__orthocenter" r="4" />
 		</g>
 		<g>
